--- a/README
+++ b/README
@@ -6,4 +6,4 @@ Created by : Shanjit Singh Jajmann
 
 Just import the output folder into Eclipse as an existing Makefile Project to get it up and running at the earliest. 
 
-Information on how to create a Project Template for any STM based ARM device on https://sites.google.com/site/cuilyahoo/. 
+Information on how to create a Project Template for any ARM based ST device on https://sites.google.com/site/cuilyahoo/. 
