--- a/README
+++ b/README
@@ -7,3 +7,7 @@ Created by : Shanjit Singh Jajmann
 Just import the output folder into Eclipse as an existing Makefile Project to get it up and running at the earliest. 
 
 Information on how to create a Project Template for any ARM based ST device on https://sites.google.com/site/cuilyahoo/. 
+
+Youtube link : http://youtu.be/cItLGvrFY0o
+
+Board made at Centre for Electronic Design and Technology, Netaji Subhas Institute of Technology, Dwarka
